--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.0.119",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-emotion": "4.0.3",
+    "gatsby-plugin-google-analytics": "2.0.17",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.23",
